# warped_diffusion

./: pyproject.toml
configs/: default.yaml
scripts/: inference.py  train_latent_clip.py  train_lora.py
src/warped_diffusion/: __init__.py
src/warped_diffusion/models/: __init__.py  latent_clip.py  semantic_warp_layer.py
src/warped_diffusion/pipeline/: __init__.py  warped_diffusion_pipeline.py
src/warped_diffusion/training/: __init__.py  train_latent_clip.py  train_lora.py
src/warped_diffusion/utils/: __init__.py  attention_hooks.py  metrics.py
src/warped_diffusion/warp/: __init__.py  energy.py  grid.py  tps.py
tests/: __init__.py  test_warp.py
